<resources>
    <string name="app_name">MSP430 Auto Curtain Controller</string>
    <string name="alert_dialog_tittle">Warning</string>
    <string name="bluetooth_not_support">bluetooth not support</string>
    <string name="bluetooth_not_enabled">bluetooth not enabled</string>
    <string name="bluetooth_not_connected">bluetooth not connected</string>
    <string name="bluetooth_get_handle_error">bluetooth get handle error</string>
    <string name="bluetooth_send_error">bluetooth send error</string>
    <string name="textViewConnected">Connected</string>
    <string name="textViewConnecting">Connecting</string>
    <string name="textViewDisconnected">Disconnected</string>
    <string name="toggleButtonStatusOn">ON</string>
    <string name="toggleButtonStatusOff">OFF</string>
    <string name="editTextLuxDefault" translatable="false">100</string>
    <string name="editTextPosDefault" translatable="false">50</string>
    <string name="buttonLux">set lux</string>
    <string name="buttonPos">set pos</string>
    <string name="toggleButtonModeAuto">Auto</string>
    <string name="toggleButtonModeManual">Manual</string>
    <string name="textViewPaired">Paired devices</string>
    <string name="menu_connect">Connect device</string>
    <string name="menu_disconnect">Disonnect device</string>
</resources>
